frontend/test/should_fail/array_removeIf_index_graph_element.grg
test array_map(ref a:array<int>) {
	if {
		a.removeIf{idx:Node -> value:int -> idx % 2 == 1}.empty();
	}	
}
